上一个、下一个

--- a/components/classic/essay/essay.wxml
+++ b/components/classic/essay/essay.wxml
@@ -1,7 +1,7 @@
 <!--components/classic/essay/essay.wxml-->
 <view>
-  <image class="classic-img" src="/images/tes/《饮食男女》@2x.png" />
-    <image class="tag" src="/components/classic/music/images/music@tag.png" />
+  <image class="classic-img" src="{{img}}" />
+    <image class="tag" src="/components/classic/essay/images/essay@tag.png" />
   <div class="motto">
     <text class="content">{{motto}}</text>
   </div>
