--- a/components/classic/movie/movie.wxml
+++ b/components/classic/movie/movie.wxml
@@ -1,7 +1,7 @@
 <!--components/classic/movie/movie.wxml-->
 <view>
-  <image class="classic-img" src="/images/tes/《饮食男女》@2x.png" />
-    <image class="tag" src="/components/classic/music/images/music@tag.png" />
+  <image class="classic-img" src="{{img}}" />
+    <image class="tag" src="/components/classic/movie/images/movie@tag.png" />
   <div class="motto">
     <text class="content">{{motto}}</text>
   </div>
