--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -9,24 +9,27 @@
       <text>三月</text><text>2018</text>  
     </view>
   </view> -->
-  <epsoide-cmp />
+  <epsoide-cmp index="{{classic.index}}"/>
   <view class="icon">
-    <v-like />
+    <v-like count="{{classic.fav_nums}}" />
     <image class="share" src="/images/icon/share.png" />
   </view>
 </view>
+<movie-cmp wx:if="{{classic.type==100}}" img="{{classic.image}}" motto="{{classic.content}}" />
+<music-cmp wx:if="{{classic.type==200}}" img="{{classic.image}}" motto="{{classic.content}}" />
+<essay-cmp wx:if="{{classic.type==300}}" img="{{classic.image}}" motto="{{classic.content}}" />
 <!-- <view >
   <image class="classic-img" src="/images/tes/《饮食男女》@2x.png" />
   <image class="tag" src="/images/tes/电影。@2x.png" />
   <div class="motto">
   <text class="content">人生不能像做菜，把所有的料准备好才下锅</text>
-</view> -->
+</view>
 <view>
   <image class="classic-img" src="/images/tes/《饮食男女》@2x.png" />
     <image class="tag" src="/components/classic/music/images/music@tag.png" />
   <div class="motto">
     <text class="content">人生不能像做菜，把所有的料准备好才下锅</text>
   </div>
-</view>
-<navi-cmp title="{{title}}"/>
+</view> -->
+<navi-cmp title="{{classic.title}}"  bind:left="onPrevious" bind:right="onNext" />
 </view>
