--- a/components/classic/music/music.wxss
+++ b/components/classic/music/music.wxss
@@ -1,15 +1,47 @@
-/* components/classic/music/music.wxss */
-.classic-img {
-  /* width: 750rpx;
-  height: 500rpx; */
+/* components/classic/music/music.wxss
+/* .classic-img {
   width: 422rpx;
   height: 422rpx;
-  /* margin-top: 60rpx; */
   border-radius: 70%;
-  /* overflow: hidden; */
-  
+} */
+
+.mus-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  /* width: 422rpx;  a tip */
+}
+
+.music-img {
+  width: 422rpx;
+  height: 422rpx;
+  /* position: absolute; */
+  /* top: 50%;
+  margin-left: 164rpx; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
 }
   
+
+.tag {
+  width: 46rpx;
+  height: 142rpx;
+  /* position: relative;
+  bottom: 68rpx;
+  left: -550rpx;   */
+}
+
+.content {
+  max-width:550rpx;
+  font-size:36rpx;
+}
+/*
+.content {
+  display: block;
+  width: 550rpx;
+  height: 112rpx;
+}
+*/
 
 .tag {
   width: 46rpx;
@@ -18,7 +50,7 @@
   bottom: 68rpx;
   left: 30rpx;  
 }
-
+/*
 .motto {
   margin-bottom: 63px;
   display: flex;
@@ -29,4 +61,4 @@
   display: block;
   width: 550rpx;
   height: 112rpx;
-}
+} */
