--- a/components/classic/essay/essay.wxml
+++ b/components/classic/essay/essay.wxml
@@ -1,8 +1,6 @@
 <!--components/classic/essay/essay.wxml-->
-<view>
-  <image class="classic-img" src="{{img}}" />
-    <image class="tag" src="/components/classic/essay/images/essay@tag.png" />
-  <div class="motto">
-    <text class="content">{{motto}}</text>
-  </div>
+<view class="classic-container">
+  <image src="{{img}}" class="classic-img"></image>
+  <image class='tag' src="images/essay@tag.png" />
+  <text class="content">{{motto}}</text>
 </view>
