--- a/components/classic/essay/essay.wxss
+++ b/components/classic/essay/essay.wxss
@@ -1,26 +1,28 @@
-/* components/classic/essay/essay.wxss */
-.classic-img {
-  width: 750rpx;
-  height: 500rpx;
+.classic-img{
+  width:750rpx;
+  height:500rpx;
+ 
+  /* margin-bottom:120rpx; */
 }
-  
 
-.tag {
-  width: 46rpx;
-  height: 142rpx;
+.tag{
+  width:46rpx;
+  height:142rpx;
   position: relative;
-  bottom: 68rpx;
-  left: 30rpx;  
+  bottom: 58rpx;
+  right:310rpx;
 }
 
-.motto {
-  margin-bottom: 63px;
+.content{
+  display:block;
+  /* width:275px; */
+  /* margin:0 auto; */
+  max-width:550rpx;
+  font-size:36rpx;
+}
+
+.classic-container{
   display: flex;
-  justify-content: center;
-}
-
-.content {
-  display: block;
-  width: 550rpx;
-  height: 112rpx;
+  flex-direction: column;
+  align-items: center;
 }
