--- a/components/classic/music/music.wxml
+++ b/components/classic/music/music.wxml
@@ -1,7 +1,7 @@
-<!--components/classic/music/music.wxml-->
-<view class="mus-container">
-  <image class="music-img {{status?'rotation':''}}" src="{{img}}" />
-  <image class="tag" src="/components/classic/music/images/music@tag.png" />
-  <image class="mustatus" src="{{status? playingUrl : pauseUrl}}" bindtap="onPlay" />
+<view class="classic-container">
+  <image src="{{img}}" class="classic-img {{playing?'rotation':''}}" />
+  <image class="player-img" bind:tap = "onPlay"
+   src="{{playing?playingUrl:waittingUrl}}" />
+   <image class='tag' src="images/music@tag.png" /> 
   <text class="content">{{motto}}</text>
 </view>
