--- a/components/classic/music/music.wxss
+++ b/components/classic/music/music.wxss
@@ -1,39 +1,13 @@
 /* components/classic/music/music.wxss */
 
-.mus-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;  
-  margin-bottom: 60px;
-  /* width: 422rpx;  a tip */
-}
-
-.music-img {
+.classic-img {
   width: 422rpx;
   height: 422rpx;
-  margin: 30px 0 24px;
-  border-radius: 60%;
-}
-  
-
-.tag{
-  width:44rpx;
-  height:127rpx;
-  position: relative;
-  bottom: 20rpx;
-  left: -330rpx;  
-}
-
-.content {
-  max-width:550rpx;
-  font-size:36rpx;
-}
-
-.mustatus {
-  width: 120rpx;
-  height: 120rpx;
-  position: relative;
-  bottom: 430rpx;  
+  margin-top: 60rpx;
+  /* margin-bottom: 120rpx; */
+  border-radius: 70%;
+  /* margin-bottom: -50px; */
+  overflow: hidden;
 }
 
 @-webkit-keyframes rotation {
@@ -45,10 +19,40 @@
     -webkit-transform: rotate(360deg);
   }
 }
+
+.tag{
+  width:44rpx;
+  height:127rpx;
+  position: relative;
+  bottom: 160rpx;
+  right:310rpx; 
+}
+
 .rotation {
   -webkit-transform: rotate(360deg);
   animation: rotation 12s linear infinite;
   -moz-animation: rotation 12s linear infinite;
-  -webkit-transform: rotation 12s linear infinite;
+  -webkit-animation: rotation 12s linear infinite;
   -o-animation: rotation 12s linear infinite;
+}
+
+.player-img {
+  width: 120rpx;
+  height: 120rpx;
+   position: relative; 
+   bottom: 271rpx; 
+}
+
+.content {
+  display: block;
+  /* width:275px; *//* margin:0 auto; */
+  max-width: 550rpx;
+  font-size: 36rpx;
+  margin-top: -90rpx;
+}
+
+.classic-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
