--- a/components/epsoide/epsoide.wxml
+++ b/components/epsoide/epsoide.wxml
@@ -1,10 +1,13 @@
 <!--components/epsoide/epsoide.wxml-->
-  <view class="full-date">
-    <view>
-      No.<text class="index">{{'0' + index}}</text>
+<!-- <view class="full-date"> -->
+  <view class="container">
+    <view class="index-container">
+      <text class="plain">No.</text>
+      <text class="index">{{_index}}</text>
+      <view class="vertical-line"></view>
     </view>
-    <text class="vertical-line"></text>
-    <view class="date">
-      <text>{{month}}</text><text>{{year}}</text>  
-    </view>
+  <view class="date"> 
+    <text class="month">{{month}}</text> 
+    <text class="year">{{year}}</text>
+  </view>  
   </view>
