--- a/components/epsoide/epsoide.wxss
+++ b/components/epsoide/epsoide.wxss
@@ -1,24 +1,54 @@
 /* components/epsoide/epsoide.wxss */
-.full-date {
-  display: flex;
-  align-items: center;  
-  margin-left: 30rpx;
+/* tip */
+.index{
+  font-size:30px;
+  /* line-height:20px;  */
+  font-weight:800;
+  margin-right:7px;
 }
 
-.index {
-  font-size: 30px;
-  font-weight: 800;
-  margin-right: 14rpx;
-}
-  
-.vertical-line {
-  margin-right: 14rpx;
-  height: 44rpx;
-  border-left: 1px solid black;
+.vertical-line{
+  margin-right:7px;
+  height:22px;
+  border-left:1px solid black;
 }
 
-.date {
+.plain{
+  font-size:16px;
+}
+
+.container{
+  display:inline-flex;
+  flex-direction: row;
+  line-height: 30px;
+  /* justify-content: flex-end; */
+   /* align-items: baseline;       */
+}
+
+.index-container{
+  display:flex;
+  flex-direction: row;
+  align-items: baseline;      
+}
+
+.date{
   display: flex;
   flex-direction: column;
-  font-size: 12px;
+  justify-content: center; 
+  /* align-items: baseline; */
+   /* line-height:30px;   */
+}
+
+.month{
+  font-size:12px;
+  line-height:12px; 
+  padding-bottom: 2px; 
+  margin-right:2rpx;
+  /* padding-right:4rpx; */
+}
+
+.year{
+  font-size:10px;
+  line-height:10px; 
+  padding-bottom:3px;   
 }
