--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,5 +1,5 @@
-<view bindtap="onLike" class="container">
-  <image src="{{like?'images/like.png':'images/like@dis.png'}}" />
-  <text>{{count}}</text>
+<view class="container" bind:tap="onLike">
+  <image src="{{like?yes_url:no_url}}" />
+   <text>{{count}}</text> 
 </view>
 
