--- a/components/like/index.wxss
+++ b/components/like/index.wxss
@@ -1,21 +1,21 @@
-/* components/like/tet.wxss */
 .container{
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  padding: 10rpx;
-  /* width:90rpx; */
-}
-
-.container image{
-  width: 32rpx;
-  height: 28rpx;
+  /* 必须指定宽度，否则会出现移动 */
+  /* width:120rpx;  */
+  padding:10rpx;
 }
 
 .container text{
-  font-size: 24rpx;
-  line-height: 24rpx;
+  font-size:24rpx;
   color: #bbbbbb;
-  position: relative;
-  bottom: 10rpx;
-  left: 6rpx;
+  line-height:24rpx;
+  position:relative;
+  bottom:10rpx;
+  left:6rpx; 
+}
+
+.container image{
+  width:32rpx;
+  height:28rpx;
 }
