--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,4 +1,11 @@
 /* pages/classic/classic.wxss */
+.container{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .full-date {
   display: flex;
   align-items: center;  
@@ -28,6 +35,7 @@ v-like {
 }
 
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;  
